# hillelPY-2

./: .env-example  .gitignore  Makefile  README.md  abstraction_hw_oop.py  book_store.sqlite3  book_store.sqlite3.py  config.py  crypto_library.py  dao.py  database.py  decorator_hw.py  ggg  jwt_example.py  main.py  oop_car.py  oop_game.py  oop_game_constants.py  our_database.sqlite3  our_database2.sqlite3  pyproject.toml  sql_theory.py  test_remove_spaces.py  tour_agency.sqlite3
.github/workflows/: testing-code.yml
api/: travels.py
api_router/: api_products.py  api_users.py  api_visitors.py
app/: tour_config.py  tour_dao.py  tour_database.py  tour_main.py  tour_schemas.py
background_tasks/: confirm_registration.py  confirm_registration_for_visitor.py
templates/: base.html  details.html  index.html  navbar.html  registration.html  welcome_letter.html
utils/: email_sender.py  space_remove.py  utils_hashlib.py
web/: web_travels.py
