[tool.poetry]
name = "hillelpy#2"
version = "0.1.0"
description = ""
authors = ["alex <alexmulyk20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.0"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
jinja2 = "^3.1.4"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
pywebio = "^1.8.3"
sqlalchemy = "^2.0.31"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120